# src/routes/index.ts
@@ -26,10 +26,10 @@ apiRouter.use(Paths.Order, orderRouter)
 apiRouter.use(Paths.Payment, paymentRouter)
 apiRouter.use(Paths.PlaceCategory, placeCategoryRouter)
 apiRouter.use(Paths.Supply, supplyRouter)
-apiRouter.use(Paths.ProductInfo, productInfoRouter)
+apiRouter.use(Paths.ProductInfos, productInfoRouter)
 apiRouter.use(Paths.Unit, unitRouter)
-apiRouter.use(Paths.Product, productRouter)
-apiRouter.use(Paths.Expense, expenseRouter)
+apiRouter.use(Paths.Products, productRouter)
+apiRouter.use(Paths.Expenses, expenseRouter)
 apiRouter.use(Paths.Setting, settingRouter)
 
 export default apiRouter
