# src/routes/productInfo.ts
@@ -3,20 +3,30 @@ import DB from '../models'
 import HttpStatusCodes from '@src/common/HttpStatusCodes'
 import { Codes, converNumRes, ResponseError } from '@src/common/ResponseError'
 import { ProductInfoAttributes, ProductInfoCreationAttributes } from '@src/models/ProductInfo'
+import { Includeable } from 'sequelize'
 
 const router = Router()
 const { ProductInfo, Product, Unit } = DB.Models
 
 router.get('/', async (req, res) => {
-    const list = await ProductInfo.findAll({
-        include: [
-            {
+    const query = req.query as { expand?: string }
+
+    const includes = [] as Includeable[]
+    if (query?.expand) {
+        const fileds = query.expand.split(',')
+
+        if (fileds.includes('products')) {
+            includes.push({
                 as: 'products',
                 model: Product,
                 include: [{ model: Unit, as: 'unit' }],
-            },
-        ],
+            })
+        }
+    }
+    const list = await ProductInfo.findAll({
+        include: includes,
     })
+    ProductInfo.findByPk()
 
     return res.status(HttpStatusCodes.OK).send(list.map((item) => item.toJSON()))
 })
@@ -41,6 +51,12 @@ router.get('/:seq', async (req, res) => {
 
 router.post('/', async (req, res) => {
     const productInfo = req.body as ProductInfoCreationAttributes
+    // 동일한 제품명은 등록 할 수 없다.
+    const cnt = await ProductInfo.count({ where: { name: productInfo.name } })
+    if (cnt > 0) {
+        res.status(HttpStatusCodes.BAD_REQUEST).send(ResponseError.get(Codes.EXIST_PRDINFO_NAME))
+        return
+    }
     const nProduct = await ProductInfo.create(productInfo)
 
     return res.status(HttpStatusCodes.CREATED).send(nProduct)
